--- a/src/global.css
+++ b/src/global.css
@@ -2,8 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+ 
+* {
+    box-sizing: border-box !important;
+  }
+  
+  ::selection {
+    color: #efb600;
+    background-color: black;
+  }
+
+
 @layer base {
     :root {
+
+
         --background: 0 0% 100%;
         --foreground: 222.2 84% 4.9%;
 
@@ -66,6 +80,35 @@
     }
 }
 
+
+.glass {
+    background: #0f0a299c;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+  }
+  
+  
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: black;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background: #efb600;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c79800;
+  }
+  
+
 @layer base {
     * {
         @apply border-border;
@@ -74,4 +117,50 @@
     body {
         @apply bg-background text-foreground;
     }
+}
+
+
+.nav.active{
+  color: #efb600;
+}
+
+ 
+
+.hamburger {
+  cursor: pointer;
+}
+
+.hamburger input {
+  display: none;
+}
+
+.hamburger svg {
+  /* The size of the SVG defines the overall size */
+  height: 3em;
+  /* Define the transition for transforming the SVG */
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* Define the transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.hamburger input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
